--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ p {
 	top: 0;
 	object-fit: cover;
 	// background: rbg(0, 0, 0, 0.5);
-	background: red;
+	// background: red;
 }
 
 body::before {
