--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-family: "MarkMedium", sans-serif;
+  padding-left: 0.5em;
+  padding-right: 0.5rem;
 }
 
 .flex {
@@ -57,14 +59,17 @@ main {
 }
 
 h1 {
-  font-size: 8rem;
+  font-size: 2rem;
+  font-size: clamp(2rem, 0.8rem + 6vw, 8rem);
+  margin-bottom: 0.5rem;
 }
 h1 span {
   color: var(--clr-red);
 }
 
 h2 {
-  font-size: 2.9rem;
+  font-size: 1.25rem;
+  font-size: clamp(1.25rem, 0.92rem + 1.65vw, 2.9rem);
   color: var(--clr-red);
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -75,14 +80,16 @@ h2 {
   background-color: black;
   padding: 0.5rem 2rem;
   display: inline-block;
-  font-size: 2rem;
+  font-size: 1.25rem;
+  font-size: clamp(1.25rem, 1.1rem + 0.75vw, 2rem);
   letter-spacing: 2px;
   color: #fff;
   text-decoration: none;
 }
 
 p {
-  font-size: 2.5rem;
+  font-size: 1.25rem;
+  font-size: clamp(1.25rem, 1rem + 1.25vw, 2.5rem);
   font-family: "MarkMedium", sans-serif;
   color: black;
   margin-bottom: 1rem;
