--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,8 @@ body {
 	margin-right: auto;
 	// use the font family 'Mark' from the fonts folder
 	font-family: "MarkMedium", sans-serif;
+	padding-left: 0.5em;
+	padding-right: 0.5rem;
 }
 
 .flex {
@@ -62,7 +64,10 @@ main {
 }
 
 h1 {
-	font-size: 8rem;
+	// font-size: 8rem;
+	font-size: 2rem;
+	font-size: clamp(2rem, 0.8rem + 6vw, 8rem);
+	margin-bottom: 0.5rem;
 
 	span {
 		color: var(--clr-red);
@@ -70,7 +75,13 @@ h1 {
 }
 
 h2 {
-	font-size: 2.9rem;
+	// font-size: 2.9rem;
+	font-size: 1.25rem;
+	font-size: clamp(
+		1.25rem,
+		0.9199999999999999rem + 1.6500000000000001vw,
+		2.9rem
+	);
 	color: var(--clr-red);
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -81,14 +92,17 @@ h2 {
 	background-color: black;
 	padding: 0.5rem 2rem;
 	display: inline-block;
-	font-size: 2rem;
+	font-size: 1.25rem;
+	font-size: clamp(1.25rem, 1.1rem + 0.75vw, 2rem);
 	letter-spacing: 2px;
 	color: #fff;
 	text-decoration: none;
 }
 
 p {
-	font-size: 2.5rem;
+	// font-size: 2.5rem;
+	font-size: 1.25rem;
+	font-size: clamp(1.25rem, 1rem + 1.25vw, 2.5rem);
 	font-family: "MarkMedium", sans-serif;
 	color: black;
 	margin-bottom: 1rem;
