--- a/style.css
+++ b/style.css
@@ -48,12 +48,10 @@ body {
 
 header {
   margin-top: 8rem;
-  margin-bottom: auto;
   text-align: center;
 }
 
 main {
-  margin-top: auto;
   text-align: center;
   margin-bottom: 8rem;
 }
@@ -70,14 +68,14 @@ h1 span {
 h2 {
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 0.92rem + 1.65vw, 2.9rem);
-  color: var(--clr-red);
+  color: black;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-family: "MarkMedium", sans-serif;
 }
 
 .btn {
-  background-color: black;
+  background-color: var(--clr-red);
   padding: 0.5rem 2rem;
   display: inline-block;
   font-size: 1.25rem;
@@ -85,6 +83,7 @@ h2 {
   letter-spacing: 2px;
   color: #fff;
   text-decoration: none;
+  margin-bottom: 4rem;
 }
 
 p {
@@ -92,8 +91,9 @@ p {
   font-size: clamp(1.25rem, 1rem + 1.25vw, 2.5rem);
   font-family: "MarkMedium", sans-serif;
   color: black;
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   color: #fff;
+  margin-top: 4rem;
 }
 
 .background-vid {
